src/objects/Workplan_Type_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Assignments_Must_Be_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All Assignments Must Be Completed before another stage can be started (set to in progress)</inlineHelpText>
        <label>All Assignments Must Be Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <formula>IF ( RecordType.DeveloperName = &apos;Process&apos;, Sequence_Number__c, Parent_Workplan_Type_Stage__r.Sequence_Number__c + (Sequence_Number__c / 100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Workplan_Type_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Workplan Type Stage</label>
        <referenceTo>Workplan_Type_Stage__c</referenceTo>
        <relationshipLabel>Workplan Type Stage</relationshipLabel>
        <relationshipName>Workplan_Type_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Category__c</fullName>
        <label>Stage Category</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Structure &amp; Admin Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Design &amp; Creation of NAEGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Enrollment, Materials &amp; Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Coding, Loading &amp; Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment &amp; ID Card Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Sales Document Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing (Monthly) Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account &amp; Member Tools</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>When a new stage is added, it should match one of the picklist values for the opportunity</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <controllingField>Stage_Category__c</controllingField>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Parity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARC Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmation of Sales/Group Paperwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Kick-off Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Design Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create MM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CYC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CYC BF App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup CVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup Davis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup Magellan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup Facets Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carve-out RX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perf Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FP CFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workplan_Type__c</fullName>
        <label>Workplan Type</label>
        <referenceTo>AIA_Workplan_Type__c</referenceTo>
        <relationshipLabel>Workplan Type Stage</relationshipLabel>
        <relationshipName>AIA_Workplan_Type_Stage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workplan Type Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Workplan_Type__c</columns>
        <columns>NAME</columns>
        <columns>Parent_Workplan_Type_Stage__c</columns>
        <columns>Stage__c</columns>
        <columns>Stage_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Active__c</columns>
        <columns>All_Assignments_Must_Be_Completed__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Sequence_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WTS-{00000}</displayFormat>
        <label>Workplan Type Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workplan Type Stage</pluralLabel>
    <recordTypes>
        <fullName>Process</fullName>
        <active>true</active>
        <label>Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Process</fullName>
        <active>true</active>
        <label>Sub-Process</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EWTS001</fullName>
        <active>true</active>
        <description>Validates the Stage Category on a SubProcess matches the Stage Category on the parent Process</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; RecordType.DeveloperName = &quot;Sub_Process&quot; &amp;&amp; TEXT(Stage_Category__c) &lt;&gt; TEXT(Parent_Workplan_Type_Stage__r.Stage_Category__c)</errorConditionFormula>
        <errorDisplayField>Stage_Category__c</errorDisplayField>
        <errorMessage>ETWS001: Stage Category must be the same as the parent Workplan Type Stage Category</errorMessage>
    </validationRules>
</CustomObject>